<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/title"
        layout="@layout/title" />

    <EditText
        android:id="@+id/original_pwd"
        style="@style/PasswordEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_and_right"
        android:layout_marginRight="@dimen/margin_left_and_right"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="@dimen/edit_text_size"
        android:hint="@string/hint_old_password" />

    <EditText
        android:id="@+id/new_paw"
        style="@style/PasswordEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_and_right"
        android:layout_marginRight="@dimen/margin_left_and_right"
        android:layout_marginTop="@dimen/margin_top"
        android:hint="@string/hint_new_password"
        android:textSize="@dimen/edit_text_size"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confim_pwd"
        style="@style/PasswordEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_left_and_right"
        android:layout_marginRight="@dimen/margin_left_and_right"
        android:hint="@string/hint_confim_new_password"
        android:textSize="@dimen/edit_text_size"
        android:inputType="textPassword" />

    <include layout="@layout/confim_button_layout" />

</LinearLayout>