<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/bind_title"
        layout="@layout/title" />

    <LinearLayout
        android:id="@+id/phone_bind_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/phone_account_edit"
            style="@style/AccountEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_hight"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/icon_phone"
            android:inputType="phone"
            android:textSize="@dimen/edit_text_size"
            android:hint="@string/phone_bind" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/get_verification_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edit_text_hight"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/get_verify_code"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/get_verification_code"
                android:textColor="@color/yellow"
                android:textSize="@dimen/get_verifycode_textsize" />

            <EditText
                android:id="@+id/verification_edit"
                style="@style/AccountEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_hight"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/edit_text_size"
                android:layout_toLeftOf="@id/get_verification_button"
                android:drawableLeft="@drawable/icon_verifycode"
                android:hint="@string/input_verification" />
        </RelativeLayout>

        <EditText
            android:id="@+id/password_edit"
            style="@style/AccountEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_hight"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/edit_text_size"
            android:drawableLeft="@drawable/icon_password"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_bind_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <EditText
            android:id="@+id/email_account_edit"
            style="@style/AccountEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_hight"
            android:layout_marginLeft="@dimen/margin_left_and_right"
            android:layout_marginRight="@dimen/margin_left_and_right"
            android:drawableLeft="@drawable/icon_email"
            android:hint="@string/mail_bind"
            android:textSize="@dimen/edit_text_size"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/email_password_edit"
            style="@style/PasswordEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_hight"
            android:layout_marginLeft="@dimen/margin_left_and_right"
            android:layout_marginRight="@dimen/margin_left_and_right"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="@dimen/edit_text_size"
            android:hint="@string/hint_password" />

    </LinearLayout>
    <include layout="@layout/confim_button_layout" />
</LinearLayout>