<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >
    
     <include
          android:id="@+id/title"
          layout="@layout/title" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:id="@+id/phone_layout"
            layout="@layout/phone_account_layout" />

       <LinearLayout 
            android:id="@+id/email_layout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:visibility="gone"
		    android:layout_marginTop="@dimen/margin_top"
		    android:layout_marginLeft="@dimen/margin_left_and_right"
		    android:layout_marginRight="@dimen/margin_left_and_right"
		    android:orientation="vertical" >
    
        <EditText
            android:id="@+id/email_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_hight"
            android:hint="@string/hint_email"
            android:imeOptions="actionDone"
            style="@style/AccountEditTextStyle"
            android:drawableLeft="@drawable/icon_email"
            android:textSize="@dimen/edit_text_size"
            android:inputType="textEmailAddress"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            
            <Button
                android:id="@+id/get_verification_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edit_text_hight"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:textColor="@color/yellow"
                android:textSize="@dimen/get_verifycode_textsize"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/get_verify_code"
                android:text="@string/get_verification_code" />

            <EditText
                android:id="@+id/verification_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_hight"
                android:layout_toLeftOf="@id/get_verification_button"
                style="@style/AccountEditTextStyle"
                android:drawableLeft="@drawable/icon_verifycode"
                android:textSize="@dimen/edit_text_size"
                android:hint="@string/input_verification"/>

        </RelativeLayout>
	</LinearLayout>

        <TextView
            android:id="@+id/email_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_and_right"
            android:layout_marginTop="20dp"
            android:text="@string/email_findpw_tips"
            android:textColor="@color/blue"
            android:textSize="13sp"
            android:visibility="gone" />

        <include
            android:id="@+id/button_layout"
            layout="@layout/confim_button_layout" />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        
        <include layout="@layout/password_layout"/>
        
        <include layout="@layout/confim_button_layout"
            android:id="@+id/password_button_layout"/>        
    </LinearLayout>

</LinearLayout>