<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_left_and_right"
        android:layout_marginRight="@dimen/margin_left_and_right"
        android:layout_marginTop="@dimen/margin_top">

        <TextView
            android:id="@+id/guest_login_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guest_login_tips"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/guest_pay_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/guest_login_tips"
            android:layout_marginTop="5dp"
            android:text="@string/guest_pay_tips"
            android:textColor="@color/blue" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/guest_pay_tips"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bind_phone"
                android:layout_width="@dimen/guest_tips_button_width"
                android:layout_height="@dimen/guest_tips_button_width"
                android:layout_marginRight="@dimen/margin_left_and_right"
                android:background="@drawable/icon_bind_phone" />

            <Button
                android:id="@+id/bind_email"
                android:layout_width="@dimen/guest_tips_button_width"
                android:layout_height="@dimen/guest_tips_button_width"
                android:layout_marginLeft="@dimen/margin_left_and_right"
                android:background="@drawable/icon_bind_email" />
        </LinearLayout>

        <Button
            android:id="@+id/bind_cancel"
            style="@style/CustomBlueButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_left_and_right"
            android:layout_marginRight="@dimen/margin_left_and_right"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_top"
            android:text="@string/bind_cancel" />
    </RelativeLayout>

</LinearLayout>